add hyperlink to index.html

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
 <body id ="home">
 
 <h1> Introduction to Jiawen Xu </h1>
+<h1> 
+<a href="./resume.html"> Link to the Resume </a> </h1>
 
 </body>
