modification to index.html

--- a/index.html
+++ b/index.html
@@ -1,17 +1,70 @@
-<! DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en">
 
+
 <head>
 
+<meta charset="UTF-8">
 <title> Jiawen Xu </title>
-
+<link rel="stylesheet" type="text/css" href="./css/style.css"/>
 </head>
 
-<body id ="home">
 
-<h1> Introduction to Jiawen Xu </h1>
-<h1> 
-<a href="./resume.html"> Link to the Resume </a> </h1>
+<body id="index">
+
+<div id="all">
+
+<div>
+<header>
+<h1> Jiawen Xu  </h1>
+
+<ul>
+<h2>
+<li><a href="./index.html"> Home </a></li>
+<li><a href="./resume.html"> Resume </a></li>
+</h2>
+</ul>
+	
+<br />
+</header>
+</div>
+
+
+
+<div id ="photo">
+
+<h3> Photos </h3> 
+
+<img class="myphoto" src="./photo/01.jpg" alt="in LA"><br><li>in LA </li><br>
+<img class="myphoto" src="./photo/02.jpg" alt="in Japan"><br><li>in Japan</li><br>
+<img class="myself" src="./photo/03.jpg" alt="Jiawen in Boston"><br><li>Jiawen in Boston</li><br>
+</div>
+
+
+
+<div id="Introduction">
+
+
+<h1> Self-Introduction </h1>
+
+<p>I am from Wuhan, China. My hometown is humid and hot place, whose whether is similar to Iowa.
+Currently, I am pursuing Bachelor Degree of Business Anlystics and Information systems at University of Iowa. </p>
+<p> I would like to travel during the holiday. This summer, I went to California and spent several days in LA. </p>
+
+</div>
+
+
+
+<footer>
+&copy; 2015 Jiawen Xu - Assignment for Software Design &amp; Development Class
+</footer>
+
+</div>
 
 </body>
+
+</html>
+
+
+
