modification to resume.html

--- a/resume.html
+++ b/resume.html
@@ -4,16 +4,78 @@
 
 <head>
 
+<meta charset="UTF-8">
 <title> Jiawen Xu </title>
+<link rel="stylesheet" type="text/css" href="./css/style.css"/>
 
-<head>
+</head>
 
 <body id="resume">
 
+<div id="all">
+
+<div>
 <header>
+<h1> Jiawen Xu  </h1>
 
-<a href="./index.html"> Link to the index </a>
+<ul >
+<h2>
+<li ><a href="./index.html"> Home </a></li>
+<li ><a href="./resume.html"> Resume </a></li>
+</h2>
+</ul>
+<br />
+</header>
+</div>
 
+
+<div id="content">
+<ul>
+<h4>
+<li class="a"> Contact Information </li>
+<li>jiawen-xu@uiowa.edu</li>
+<li>319-855-0806</li>
+</h4>
+</ul>
+<ul>
+<h2> Education </h2>
+
+The University of Iowa, Iowa City, IA (Anticipated May 2016)<br /> 
+Finance & Business Analystics and Information Systems Major<br />
+
+<h2> Work Experience </h2>
+
+<h4> Honors Gallery Team Member, Iowa City, IA (August 2015-Present)</h4>
+<li> Develops, stages, and monitors art exhibits and receptions for five hours per week</li>
+<li> Participate scheduled Honor student staff meetings and solve recent problems</li>
+<li> Work with other two teammates to help and talk with students who are interested in exhibiting their ark work</li><br />
+
+<h4> Dining Associate, Hillcrest Market Place, Iowa City, IA (August 2013-May 2014)</h4>
+<li> Addressed 50-100 customer concerns on a daily basis </li>
+<li> Cooprated with 5-10 fellow employees due shifts </li>
+<li> Assist other employees in different positions </li>
+<li> Be responsible for training new employees to be familiar with their duty</li><br />
+
+<h2>Volunteer Experience</h2>
+
+<h4>Student Ambassador, University of Iowa Job & Internship Fair (September 2014)</h4>                    
+<li>Greeted employers and guided them to check in </li>
+<li>Assisted students to check in and find positions</li> 
+
+<h2>Honors</h2>
+<li>Named to the Dean’s list(Fall 2013—Present)</li>                                                                                                        
+
+<h2>Language Skills/ Proficiencies</h2>
+
+<li>Fluent in Mandarin, English, and Japanese</li>
+<li>MS Word, Excel, Access, MS Visual Basic, Oracle SQL</li>
+
+</ul>
+
+</div>
+
+
+</div>
 
 
 </body>
