adjustion to header

--- a/resume.html
+++ b/resume.html
@@ -20,8 +20,8 @@
 
 <ul >
 <h2>
-<li ><a href="./index.html"> Home </a></li>
-<li ><a href="./resume.html"> Resume </a></li>
+<li class="a"><a href="./index.html"> Home </a></li>
+<li class="a"><a href="./resume.html"> Resume </a></li>
 </h2>
 </ul>
 <br />
@@ -40,8 +40,8 @@
 <ul>
 <h2> Education </h2>
 
-The University of Iowa, Iowa City, IA (Anticipated May 2016)<br /> 
-Finance & Business Analystics and Information Systems Major<br />
+The University of Iowa, Iowa City, IA (Anticipated May 2016)<br> 
+Finance & Business Analystics and Information Systems Major<br>
 
 <h2> Work Experience </h2>
 
@@ -74,6 +74,10 @@ Finance & Business Analystics and Information Systems Major<br />
 
 </div>
 
+
+<footer>
+&copy; 2015 Jiawen Xu - Assignment for Software Design &amp; Development Class
+</footer>
 
 </div>
 
