--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
 <ul>
 <h2>
-<li><a href="./index.html"> Home </a></li>
-<li><a href="./resume.html"> Resume </a></li>
+<li class="a"><a href="./index.html"> Home </a></li>
+<li class="a"><a href="./resume.html"> Resume </a></li>
 </h2>
 </ul>
 	
