adjustment to photos and introduction

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
 <h3> Photos </h3> 
 
-<img class="myphoto" src="./photo/01.jpg" alt="in LA"><br><li>in LA </li><br>
-<img class="myphoto" src="./photo/02.jpg" alt="in Japan"><br><li>in Japan</li><br>
-<img class="myself" src="./photo/03.jpg" alt="Jiawen in Boston"><br><li>Jiawen in Boston</li><br>
+<img class="photo1" src="./photo/01.jpg" alt="in Orlando"><br><li>in Orlando </li><br>
+<img class="photo2" src="./photo/02.jpg" alt="in Seattle"><br><li>in Seattle</li><br>
+<img class="photo2" src="./photo/03.jpg" alt="Jiawen in Boston"><br><li>Jiawen in Boston</li><br>
 </div>
 
 
@@ -50,7 +50,7 @@
 
 <p>I am from Wuhan, China. My hometown is humid and hot place, whose whether is similar to Iowa.
 Currently, I am pursuing Bachelor Degree of Business Anlystics and Information systems at University of Iowa. </p>
-<p> I would like to travel during the holiday. This summer, I went to California and spent several days in LA. </p>
+<p> I would like to travel during the holiday. This summer, I went to Orlando, and spent several days in Universal Studios and Walt Disney World. </p>
 
 </div>
 
